# Scholarr

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  seed_data.py
distribution/linux/: install.sh  scholarr.service  uninstall.sh
distribution/macos/: com.scholarr.agent.plist  install.sh  uninstall.sh
distribution/windows/: install.ps1
scholarr/: __init__.py  __main__.py  app.py
scholarr/api/: __init__.py
scholarr/api/v1/: __init__.py  router.py
scholarr/core/: __init__.py  exceptions.py  security.py
scholarr/core/academic_items/: __init__.py
scholarr/core/auth/: __init__.py
scholarr/core/backup/: __init__.py
scholarr/core/config/: __init__.py
scholarr/core/courses/: __init__.py
scholarr/core/custom_formats/: __init__.py
scholarr/core/health_check/: __init__.py
scholarr/core/history/: __init__.py
scholarr/core/housekeeping/: __init__.py
scholarr/core/import_sources/: __init__.py  decision_engine.py
scholarr/core/integrations/: __init__.py  blackboard.py  calendar_sync.py  canvas.py  google_classroom.py  moodle.py  sql_integration.py  word_integration.py
scholarr/core/jobs/: __init__.py
scholarr/core/managed_files/: __init__.py
scholarr/core/messaging/: __init__.py
scholarr/core/notifications/: __init__.py
scholarr/core/organizer/: __init__.py
scholarr/core/parser/: __init__.py
scholarr/core/platform/: __init__.py
scholarr/core/qualities/: __init__.py
scholarr/core/queue/: __init__.py
scholarr/core/root_folders/: __init__.py
scholarr/core/semesters/: __init__.py
scholarr/core/tags/: __init__.py
scholarr/core/validation/: __init__.py
scholarr/db/: base.py  migrations.py  models.py  schemas.py  session.py
scholarr/db/migrations/: __init__.py  env.py
scholarr/schemas/: __init__.py  academic_item.py  backup.py  calendar.py  command.py  course.py  custom_format.py  file_profile.py  file_system.py  health.py  history.py  host_config.py  import_result.py  log.py  managed_file.py  naming_config.py  note.py  notification.py  queue.py  root_folder.py  semester.py  system.py  tag.py
scholarr/services/: __init__.py  academic_item_service.py  backup_service.py  calendar_service.py  code_runner_service.py  command_service.py  course_service.py  custom_format_service.py  file_profile_service.py  file_system_service.py  file_watcher.py  health_service.py  history_service.py  host_config_service.py  import_service.py  log_service.py  managed_file_service.py  manual_import_service.py  mass_editor_service.py  naming_service.py  note_service.py  notification_service.py  queue_service.py  root_folder_service.py  scheduler.py  semester_service.py  system_service.py  tag_service.py
scholarr/signalr/: __init__.py
scholarr/static/css/: scholarr.css
scholarr/templates/layouts/: base.html
tests/: conftest.py
tests/automation/: __init__.py  test_stress.py  test_websocket.py
tests/integration/: __init__.py  test_api_academic_items.py  test_api_courses.py  test_api_system.py  test_import_pipeline.py
tests/unit/: __init__.py
tests/unit/core/: test_courses.py  (+7 more)
(+47 files in other folders)
