[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholarr"
version = "0.2.1"
description = "Self-hosted academic file management system"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.11"
authors = [
    {name = "Calvin Pawluck", email = "capawluck@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "websockets>=12.0",
    "watchdog>=3.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "sentry-sdk[fastapi]>=1.40.0",
    "psutil>=5.9.7",
    "python-Levenshtein>=0.23.0",
    "aiosqlite>=0.19.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "jinja2>=3.1.3",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "factory-boy>=3.3.0",
    "hypothesis>=6.92.0",
    "mypy>=1.8.0",
    "ruff>=0.1.13",
    "black>=23.12.1",
    "pre-commit>=3.6.0",
]
postgres = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
]
mysql = [
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
]

[project.scripts]
scholarr = "scholarr.__main__:main"

[tool.setuptools.packages.find]
include = ["scholarr*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends() pattern)
    "A002",   # argument shadowing builtin (id, type are standard REST param names)
    "A001",   # variable shadowing builtin
    "UP042",  # replace-str-enum (changing class hierarchy is risky)
    "N818",   # exception name suffix (ScholarrException is the base, not an error)
    "SIM108", # ternary operator suggestion (readability preference)
    "SIM116", # dict lookup instead of if-elif (readability preference)
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.coverage.run]
source = ["scholarr"]
omit = ["tests/*", "scholarr/db/migrations/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
